 (Format: Year/Month/Day)
Changes for 1.0rc3:
*06/07/21:
   * Stop using fixed values for num/caps/scroll lock, and ignore scroll lock
     as a modifier (Mark)
     FbTk/KeyUtil.cc/hh
*06/07/20:
   * Fix _NET_WM_MOVERESIZE, bug #1525404 (Mark)
     Ewmh.cc
   * Properly revert focus when two windows close simultaneously (Mark)
     WinClient.cc/hh FbTk/FbWindow.hh fluxbox.cc Window.cc
*06/07/19:
   * Preserve order of focused windows on restart (Mark)
     Workspace.cc Screen.cc FocusControl.cc/hh
*06/07/16:
   * Fix a bug in Transparent.cc, (Henrik)
    #1362913 Fluxbox core dumps on Solaris 
    FbTk/Transparent.cc
*06/07/14:
   * Fix a possible bug with window cycling on multiple screens (Mark)
     fluxbox.cc WorkspaceCmd.cc
   * Include minimized windows when "alt-tabbing", added 16 to the
      Next/PrevWindow bitmask to disable the behavior (Mark)
      FocusControl.cc/hh
*06/07/13:
   * Remove some redundant code for loading styles (Mark)
     fluxbox.cc Screen.cc RootTheme.cc/hh
   * Fix background: random (Mark)
     RootTheme.cc
*06/07/10:
   * Next/PrevWindow toolbar buttons break MouseFocus: bug #1519913 (Mark)
     WorkspaceCmd.cc FocusControl.cc
*06/07/08:
   * Fix implementation of _NET_MOVERESIZE_WINDOW (Mark)
     Ewmh.cc
*06/07/06:
   * Fixed bug #1069909, Incorrect window dimensions (Henrik)
     It created strut even if it didnt have any clients
     Slit.cc
   * Fixed bug #1491571, Round corners badly rendered (Henrik)
     Update shape in FbWinFrame after a shade()
     FbWinFrame.cc
   * Changing between internal and external tabs didn't affect iconified
     windows (Mark)
     Screen.cc
   * Still trying to get the focus right: bug #1517750 (Mark)
     FocusControl.cc Window.cc Screen.cc
*06/07/05:
   * Fix crash on startup on some platforms (Simon)
     FbTk/FbString.cc
*06/07/04:
   * Fix some sizing issues from gravity change patch (Simon)
     FbWinFrame.hh/cc Window.cc